[gd_scene load_steps=2 format=3 uid="uid://bsubfbpe2vl2w"]

[ext_resource type="Script" uid="uid://5awevy5pfi88" path="res://middle-arrows/assets/scripts/main.gd" id="1_qholi"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_qholi")

[node name="Lane (ColorRect)" type="ColorRect" parent="."]
offset_left = 565.0
offset_right = 715.0
offset_bottom = 720.0
color = Color(0.21960784, 0.07058824, 0.39215687, 0.19607843)

[node name="HitZone (Area2D)" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitZone (Area2D)"]

[node name="Sprite2D" type="Sprite2D" parent="HitZone (Area2D)"]

[node name="NotesContainer (Node2D)" type="Node2D" parent="."]

[node name="UI (CanvasLayer)" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="UI (CanvasLayer)"]
offset_right = 40.0
offset_bottom = 23.0

[node name="ComboLabel" type="Label" parent="UI (CanvasLayer)"]
offset_right = 40.0
offset_bottom = 23.0

[node name="FeedbackLabel" type="Label" parent="UI (CanvasLayer)"]
offset_right = 40.0
offset_bottom = 23.0

[node name="Timer" type="Timer" parent="."]
